[gd_scene load_steps=13 format=3 uid="uid://t1s1qp1nrblc"]

[ext_resource type="Script" path="res://scripts/ScoreScreen.gd" id="1_0h8f4"]
[ext_resource type="Texture2D" uid="uid://bgox1nmwjs8yx" path="res://assets/gfx/Menu/DeathScreen.png" id="1_xn208"]
[ext_resource type="AudioStream" uid="uid://c62kcomkvbgs3" path="res://assets/sfx/Themes/Button_Click.wav" id="2_cdh2e"]
[ext_resource type="AudioStream" uid="uid://c3tijyvbg4uo4" path="res://assets/sfx/Themes/Main_Menu_Theme.wav" id="3_e7vpf"]
[ext_resource type="FontFile" uid="uid://djtmfhr34omsr" path="res://assets/gfx/CorrectionBrush.ttf" id="3_h6xbi"]
[ext_resource type="Texture2D" uid="uid://c6djw28bv7dkx" path="res://assets/gfx/Menu/NextButton.png" id="4_0vukb"]
[ext_resource type="Texture2D" uid="uid://dakr3j5as8abu" path="res://assets/gfx/Menu/NextButtonW.png" id="5_p6dyf"]
[ext_resource type="Texture2D" uid="uid://dsp0iaadsbv0f" path="res://assets/gfx/Menu/Menu.png" id="5_rh1v5"]
[ext_resource type="Texture2D" uid="uid://cpgjbm3cxgfcs" path="res://assets/gfx/Menu/MenuWS.png" id="8_c1shu"]
[ext_resource type="Texture2D" uid="uid://7qcr3fki2vr7" path="res://assets/gfx/Menu/MenuW.png" id="9_l8f86"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_g2dt0"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_y25yq"]

[node name="ScoreScreen" type="Node2D"]
script = ExtResource("1_0h8f4")

[node name="Sprite2D" type="Sprite2D" parent="."]
modulate = Color(0.305882, 0.305882, 0.305882, 1)
position = Vector2(576, 324)
scale = Vector2(0.6, 0.6)
texture = ExtResource("1_xn208")

[node name="Label" type="Label" parent="."]
offset_left = 155.0
offset_top = 69.0
offset_right = 998.0
offset_bottom = 228.0
theme_override_fonts/font = ExtResource("3_h6xbi")
theme_override_font_sizes/font_size = 73
text = "Score: 9999
Enter Name"
horizontal_alignment = 1

[node name="LineEdit" type="LineEdit" parent="."]
offset_left = 362.0
offset_top = 275.0
offset_right = 906.0
offset_bottom = 519.0
auto_translate = false
theme_override_fonts/font = ExtResource("3_h6xbi")
theme_override_font_sizes/font_size = 206
theme_override_styles/normal = SubResource("StyleBoxEmpty_g2dt0")
theme_override_styles/focus = SubResource("StyleBoxEmpty_y25yq")
placeholder_text = "_ _ _"
max_length = 3
context_menu_enabled = false
shortcut_keys_enabled = false
middle_mouse_paste_enabled = false
selecting_enabled = false
deselect_on_focus_loss_enabled = false
drag_and_drop_selection_enabled = false

[node name="Sprite2D2" type="Sprite2D" parent="."]
modulate = Color(0, 0, 0, 0.372549)
self_modulate = Color(0.34902, 0.34902, 0.34902, 1)
position = Vector2(568, 396)
scale = Vector2(6.40625, 3.35156)

[node name="Forward" type="TextureButton" parent="."]
clip_contents = true
offset_left = 960.0
offset_top = 496.0
offset_right = 1456.0
offset_bottom = 946.0
scale = Vector2(0.260221, 0.260221)
texture_normal = ExtResource("4_0vukb")
texture_hover = ExtResource("5_p6dyf")
ignore_texture_size = true
stretch_mode = 3

[node name="Back" type="TextureButton" parent="."]
clip_contents = true
offset_left = 64.0
offset_top = 496.0
offset_right = 560.0
offset_bottom = 946.0
scale = Vector2(0.260221, 0.260221)
texture_normal = ExtResource("4_0vukb")
texture_hover = ExtResource("5_p6dyf")
ignore_texture_size = true
stretch_mode = 3
flip_h = true

[node name="Mainbutton" type="TextureButton" parent="."]
offset_left = 440.0
offset_top = 520.0
offset_right = 1972.0
offset_bottom = 1116.0
scale = Vector2(0.177091, 0.177091)
texture_normal = ExtResource("5_rh1v5")
texture_pressed = ExtResource("8_c1shu")
texture_hover = ExtResource("9_l8f86")
ignore_texture_size = true
stretch_mode = 3

[node name="Button" type="AudioStreamPlayer2D" parent="."]
position = Vector2(64, 496)
scale = Vector2(0.260221, 0.260221)
stream = ExtResource("2_cdh2e")
volume_db = 6.199

[node name="Theme" type="AudioStreamPlayer2D" parent="."]
position = Vector2(64, 496)
scale = Vector2(0.260221, 0.260221)
stream = ExtResource("3_e7vpf")
volume_db = -9.369
autoplay = true

[connection signal="ready" from="LineEdit" to="." method="_on_line_edit_ready"]
[connection signal="text_submitted" from="LineEdit" to="." method="_on_line_edit_text_submitted"]
[connection signal="pressed" from="Forward" to="." method="_on_forward_pressed"]
[connection signal="pressed" from="Back" to="." method="_on_forward_pressed"]
[connection signal="pressed" from="Mainbutton" to="." method="_on_mainbutton_pressed"]
